:bug: Newsletter on Mobile
Fix svg font sizes and svg content display

--- a/src/scss/partials/sections/newsletter-popup.scss
+++ b/src/scss/partials/sections/newsletter-popup.scss
@@ -52,15 +52,17 @@
 	.newsletter-popup_content {
 		font-family: $font-family-secondary;
 		margin-bottom: 25px;
-		& svg {
-			&:first-child {
-				@include media-max-width($medium-down) {
-					display: none;
+		.newsletter-popup_content-wrapper {
+			> svg {
+				&:first-child {
+					@include media-max-width($medium-down) {
+						display: none;
+					}
 				}
-			}
-			&:last-child {
-				@include media-min-width($medium-up) {
-					display: none;
+				&:last-child {
+					@include media-min-width($medium-up) {
+						display: none;
+					}
 				}
 			}
 		}
@@ -75,7 +77,7 @@
 		padding: 0.85em 2em;
 		border-width: 1px;
 		@include media-max-width($medium-down) {
-			padding: 0.7em 2em;
+			padding: 0.8em 2em;
 		}
 
 		&:hover {
@@ -100,15 +102,33 @@
 	// inputs
 	.form-container {
 		padding-top: 8px;
+		@include media-max-width($medium-down) {
+			padding-top: 4px;
+		}
 	}
 	.form-group {
 		padding: 12px 0;
+		@include media-max-width($medium-down) {
+			padding: 8px 0;
+		}
 		input {
 			width: 100%;
 			border: solid 2px $newsletter-secondary;
 			border-radius: 50px;
 			background-color: transparent;
 			outline: none;
+		}
+		.newsletter-name {
+			@include media-max-width($medium-down) {
+				width: calc(110px / 2 + 5);
+				height: auto;
+			}
+		}
+		.newsletter-email {
+			@include media-max-width($medium-down) {
+				width: calc(280px / 2 + 15);
+				height: auto;
+			}
 		}
 	}
 }
